test : 장바구니 예약 동시성 테스트 완료